[package]
name = "pastecli"
version = "0.1.1"
edition = "2021"
description = "A command line interface for paste.nextcord.dev"
repository = "https://github.com/TAG-Epic/pastecli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ureq = "2.4.0"
